// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when enumeration property has invalid reference should have validation failures 1`] = `"Enumeration property 'SchoolYear' does not match any declared Enumeration in namespace EdFi."`;

exports[`when enumeration property has invalid reference should have validation failures 2`] = `
Object {
  "column": 16,
  "line": 10,
  "tokenText": "SchoolYear",
}
`;

exports[`when school year enumeration property is missing namespace reference to core should have validation failures 1`] = `"Enumeration property 'SchoolYear' does not match any declared Enumeration in namespace Extension."`;

exports[`when school year enumeration property is missing namespace reference to core should have validation failures 2`] = `
Object {
  "column": 16,
  "line": 15,
  "tokenText": "SchoolYear",
}
`;
